examples/error/hierachical_modelling/paraHRefPPError/error-GCC.errorOutput
submodel/Untergruppe.param.xml:3: Caught octave exception 'errorNoneExistendVariable' undefined near line 1, column 1
Hauptgruppe.xml:38: included from here
MBS.mbsim.xml:18: [ecount=1] included from here
MBS.mbsx:8: [ecount=1] included from here
